# sknlp

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test_lookup.py  tox.ini
.github/scripts/: download_pretrain.sh  prepare_data.sh
.github/workflows/: run_full_test.yml
examples/retrieval/: README.md  bq_bert.py  lcqmc_bert.py
sknlp/: __init__.py
sknlp/activations/: __init__.py
sknlp/callbacks/: __init__.py  f_score.py  learning_rate_scheduler.py  model_score.py  save.py  tagging_fscore_metric.py  weight_decay.py  weight_decay_scheduler.py
sknlp/data/: __init__.py  bert_dataset.py  bert_mixin.py  classification_dataset.py  generation_dataset.py  nlp_dataset.py  retrieval_dataset.py  similarity_dataset.py  tagging_dataset.py  tokenizer.py  utils.py
sknlp/layers/: __init__.py  attention.py  bert_attention_mask.py  bert_layer.py  bert_lm.py  bert_seq2seq.py  bert_tokenization.py  bilstm.py  crf_layer.py  dilated_convolution.py  embedding_layer.py  global_pointer.py  lstmp.py  mlp.py  multi_lstmp.py  text_rnn.py  transformer_encoder_block.py
sknlp/losses/: __init__.py  losses.py
sknlp/metrics/: __init__.py  acc.py  accuracy.py  precision_recall_f1.py  utils.py
sknlp/module/: __init__.py  base_model.py  embedding.py  parameter_search.py  parameter_searher.py  supervised_model.py  text_rnn.py  unsupervised_model.py
sknlp/optimizers/: __init__.py  adam.py  optimizer.py
sknlp/typing/: __init__.py
sknlp/utils/: __init__.py  classification.py  file.py  generation.py  logging.py  tagging.py  tensor.py  test_generation.py
sknlp/vocab/: __init__.py  test_vocab.py  vocab.py
tests/: __init__.py  conftest.py  test_sknlp.py
tests/data/: conftest.py  test_bert_dataset.py  test_classification_dataset.py  test_jieba_tokenizer.py  test_nlp_dataset.py  test_tagging_dataset.py  test_tokenizer.py
tests/layers/: test_bert_attention_mask.py  test_bert_tokenization.py  test_lstmp.py  test_mlp.py
tests/metrics/: test_utils.py
tests/module/: conftest.py  test_base_model.py  test_embedding.py  test_supervised_model.py  test_text_rnn.py
tests/utils/: test_file.py  test_tagging.py
tests/vocab/: test_vocab.py
(+80 files in other folders)
