[tool.poetry]
name = "sknlp"
version = "0.1.22"
description = ""
authors = ["nanaya <nanaya100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
tabulate = "^0.8.6"
pandas = "1.0.4"
joblib = "^0.14.1"
jieba_fast = "^0.53"
tensorflow = "2.3.1"
tf-models-official = "^2.3.0"
tensorflow-text = "2.3.0"
tensorflow-addons = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = {version = "^20.8b1", allow-prereleases = true}

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
