[tool.poetry]
name = "sknlp"
version = "0.3.0"
description = ""
authors = ["nanaya <nanaya100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
tabulate = "^0.8.6"
pandas = "1.0.4"
numpy = "<1.20.0"
tensorflow = "2.5.0"
tensorflow-text = "2.5.0"
tf-models-official = "2.5.0"
tensorflow-addons = "0.13.0"
jieba = "^0.42.1"
scikit-learn = "^0.24.2"
keras-tuner = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = { version = "^20.8b1", allow-prereleases = true }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
