[tool.poetry]
name = "sknlp"
version = "0.4.2"
description = ""
authors = ["nanaya <nanaya100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.5,<3.10"
tabulate = "0.8.9"
pandas = "1.3.1"
tensorflow = "2.7.0"
tensorflow-addons = "0.15.0"
tensorflow-text = "2.7.3"
jieba = "^0.42.1"
scikit-learn = "1.0"
keras-tuner = "^1.0.2"
igraph = "^0.9.8"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = { version = "^20.8b1", allow-prereleases = true }
pytest-cov = "^3.0.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
